bindings/c/include/proven.h

/* ============================================================================
 * Status Codes
 * ============================================================================ */

/**
 * @brief Status codes returned by Proven operations.
 *
 * Zero indicates success; negative values indicate specific error conditions.
 */
typedef enum {
    PROVEN_OK                      =   0,
    PROVEN_ERR_NULL_POINTER        =  -1,
    PROVEN_ERR_INVALID_ARGUMENT    =  -2,
    PROVEN_ERR_OVERFLOW            =  -3,
    PROVEN_ERR_UNDERFLOW           =  -4,
    PROVEN_ERR_DIVISION_BY_ZERO    =  -5,
    PROVEN_ERR_PARSE_FAILURE       =  -6,
    PROVEN_ERR_VALIDATION_FAILED   =  -7,
    PROVEN_ERR_OUT_OF_BOUNDS       =  -8,
    PROVEN_ERR_ENCODING_ERROR      =  -9,
    PROVEN_ERR_ALLOCATION_FAILED   = -10,
    PROVEN_ERR_NOT_IMPLEMENTED     = -99
} ProvenStatus;
/* ============================================================================
 * Core Result Types
 * ============================================================================ */

/** @brief Result for integer operations */
typedef struct { int32_t status; int64_t value; } ProvenIntResult;
/** @brief Result for boolean operations */
typedef struct { int32_t status; bool value; } ProvenBoolResult;
/**
 * @brief Result for string operations.
 * @note Caller must free value using proven_free_string().
 */
typedef struct { int32_t status; char* value; size_t length; } ProvenStringResult;
/** @brief Result for floating-point operations */
typedef struct { int32_t status; double value; } ProvenFloatResult;
/* ============================================================================
 * Memory Management (1 function)
 * ============================================================================ */

/**
 * @brief Free a string allocated by Proven functions.
 * @param ptr String to free (may be NULL).
 */
void proven_free_string(char* ptr);
/**
 * @brief Integer exponentiation with overflow checking.
 * @param base Base value.
 * @param exp Exponent (must be non-negative).
 * @return PROVEN_ERR_OVERFLOW if result would overflow int64_t.
 */
ProvenIntResult proven_math_pow_checked(int64_t base, uint32_t exp);
/* ============================================================================
 * SafeString - Text operations that handle encoding safely (4 functions)
 * ============================================================================ */

/**
 * @brief Check if bytes are valid UTF-8.
 * @param ptr Pointer to byte data.
 * @param len Length of data.
 * @return Result with validation status.
 */
ProvenBoolResult proven_string_is_valid_utf8(const uint8_t* ptr, size_t len);
/**
 * @brief Escape string for SQL (single quotes).
 * @note Prefer parameterized queries over string escaping.
 * @return Result with escaped string (caller must free).
 */
ProvenStringResult proven_string_escape_sql(const uint8_t* ptr, size_t len);
/**
 * @brief Escape string for HTML (prevents XSS).
 * @return Result with escaped string (caller must free).
 */
ProvenStringResult proven_string_escape_html(const uint8_t* ptr, size_t len);
/**
 * @brief Escape string for JavaScript string literals.
 * @return Result with escaped string (caller must free).
 */
ProvenStringResult proven_string_escape_js(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafePath - Filesystem traversal prevention (2 functions)
 * ============================================================================ */

/**
 * @brief Check if path contains directory traversal sequences ("..").
 * @return Result with traversal detection status (true = traversal detected).
 */
ProvenBoolResult proven_path_has_traversal(const uint8_t* ptr, size_t len);
/**
 * @brief Sanitize a filename by removing dangerous characters.
 * @return Result with sanitized filename (caller must free).
 */
ProvenStringResult proven_path_sanitize_filename(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafeCrypto - Cryptographic primitives (2 functions)
 * ============================================================================ */

/**
 * @brief Constant-time byte comparison (timing-attack safe).
 * @param ptr1 First buffer.
 * @param len1 Length of first buffer.
 * @param ptr2 Second buffer.
 * @param len2 Length of second buffer.
 * @return Result with comparison status. Returns false if lengths differ.
 */
ProvenBoolResult proven_crypto_constant_time_eq(
    const uint8_t* ptr1, size_t len1,
    const uint8_t* ptr2, size_t len2
);
/**
 * @brief Fill buffer with cryptographically secure random bytes.
 * @param ptr Buffer to fill.
 * @param len Number of bytes to generate.
 * @return Status code.
 */
ProvenStatus proven_crypto_random_bytes(uint8_t* ptr, size_t len);
/* ============================================================================
 * SafeEmail - Email validation (1 function)
 * ============================================================================ */

/**
 * @brief Validate email address (RFC 5321 simplified).
 * @return Result with validation status.
 */
ProvenBoolResult proven_email_is_valid(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafeNetwork - IP address parsing and classification (3 functions)
 * ============================================================================ */

/** @brief IPv4 address structure. */
typedef struct { uint8_t octets[4]; } ProvenIPv4Address;
/** @brief Result for IPv4 parsing. */
typedef struct {
    int32_t          status;
    ProvenIPv4Address address;
} ProvenIPv4Result;
/**
 * @brief Parse IPv4 address string (e.g., "192.168.1.1").
 * @return Result with parsed address.
 */
ProvenIPv4Result proven_network_parse_ipv4(const uint8_t* ptr, size_t len);
/**
 * @brief Check if IPv4 address is private (RFC 1918).
 * @return true if private (10.x.x.x, 172.16-31.x.x, 192.168.x.x).
 */
bool proven_network_ipv4_is_private(ProvenIPv4Address addr);
/**
 * @brief Check if IPv4 address is loopback (127.0.0.0/8).
 * @return true if loopback.
 */
bool proven_network_ipv4_is_loopback(ProvenIPv4Address addr);
/* ============================================================================
 * SafeJson - JSON validation and type detection (2 functions)
 * ============================================================================ */

/** @brief JSON value type. */
typedef enum {
    PROVEN_JSON_NULL    =  0,
    PROVEN_JSON_BOOL    =  1,
    PROVEN_JSON_NUMBER  =  2,
    PROVEN_JSON_STRING  =  3,
    PROVEN_JSON_ARRAY   =  4,
    PROVEN_JSON_OBJECT  =  5,
    PROVEN_JSON_INVALID = -1
} ProvenJsonType;
/**
 * @brief Check if string is valid JSON.
 * @return Result with validation status.
 */
ProvenBoolResult proven_json_is_valid(const uint8_t* ptr, size_t len);
/**
 * @brief Get JSON value type at root level.
 * @return JSON type (PROVEN_JSON_INVALID if not valid JSON).
 */
ProvenJsonType proven_json_get_type(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafeDateTime - ISO 8601 date/time handling (4 functions)
 * ============================================================================ */

/** @brief DateTime components. */
typedef struct {
    int32_t  year;
    uint8_t  month;              /**< 1-12 */
    uint8_t  day;                /**< 1-31 */
    uint8_t  hour;               /**< 0-23 */
    uint8_t  minute;             /**< 0-59 */
    uint8_t  second;             /**< 0-59 */
    uint32_t nanosecond;
    int16_t  tz_offset_minutes;  /**< 0 for UTC, negative for west of UTC */
} ProvenDateTime;
/** @brief DateTime result. */
typedef struct {
    int32_t       status;
    ProvenDateTime datetime;
} ProvenDateTimeResult;
/**
 * @brief Parse ISO 8601 date string.
 *
 * Supports: YYYY-MM-DD, YYYY-MM-DDTHH:MM:SS, YYYY-MM-DDTHH:MM:SSZ,
 * YYYY-MM-DDTHH:MM:SS+HH:MM
 */
ProvenDateTimeResult proven_datetime_parse(const uint8_t* ptr, size_t len);
/**
 * @brief Format DateTime as ISO 8601 string.
 * @return Result with formatted string (caller must free).
 */
ProvenStringResult proven_datetime_format_iso8601(ProvenDateTime dt);
/** @brief Check if year is a leap year. */
bool proven_datetime_is_leap_year(int32_t year);
/** @brief Get number of days in a month. Returns 0 if invalid month. */
uint8_t proven_datetime_days_in_month(int32_t year, uint8_t month);
/* ============================================================================
 * SafeFloat - Safe floating-point operations (5 functions)
 * ============================================================================ */

/**
 * @brief Safe floating-point division.
 * @return PROVEN_ERR_DIVISION_BY_ZERO if b is 0, PROVEN_ERR_INVALID_ARGUMENT if NaN.
 */
ProvenFloatResult proven_float_div(double a, double b);
/** @brief Check if float is finite (not NaN or Inf). */
bool proven_float_is_finite(double x);
/** @brief Check if float is NaN. */
bool proven_float_is_nan(double x);
/**
 * @brief Safe square root.
 * @return PROVEN_ERR_INVALID_ARGUMENT if x is negative or NaN.
 */
ProvenFloatResult proven_float_sqrt(double x);
/**
 * @brief Safe natural logarithm.
 * @return PROVEN_ERR_INVALID_ARGUMENT if x <= 0 or NaN.
 */
ProvenFloatResult proven_float_ln(double x);
/**
 * @brief Encode bytes to hex string.
 * @param ptr Input bytes.
 * @param len Number of bytes.
 * @param uppercase If true, use uppercase hex digits.
 * @return Result with hex string (caller must free).
 */
ProvenStringResult proven_hex_encode(const uint8_t* ptr, size_t len, bool uppercase);
/* ============================================================================
 * SafeChecksum - CRC and hash verification (2 functions)
 * ============================================================================ */

/**
 * @brief Calculate CRC32 checksum.
 * @return Result with CRC32 value in the int64 field.
 */
ProvenIntResult proven_checksum_crc32(const uint8_t* ptr, size_t len);
/**
 * @brief Verify CRC32 matches expected value.
 * @return Result with verification status.
 */
ProvenBoolResult proven_checksum_verify_crc32(const uint8_t* ptr, size_t len, uint32_t expected);
/* ============================================================================
 * SafeProbability - Probability values clamped to [0, 1] (4 functions)
 * ============================================================================ */

/**
 * @brief Create probability value (clamped to [0, 1]).
 * @return Clamped probability.
 */
double proven_probability_create(double value);
/**
 * @brief Multiply probabilities (independent events: P(A and B) = P(A) * P(B)).
 * @return Product probability.
 */
double proven_probability_and(double a, double b);
/**
 * @brief Add probabilities (mutually exclusive events: P(A or B) = P(A) + P(B)).
 * @return Sum probability (clamped to 1.0).
 */
double proven_probability_or_exclusive(double a, double b);
/**
 * @brief Complement probability (P(not A) = 1 - P(A)).
 * @return Complement probability.
 */
double proven_probability_not(double p);
/* ============================================================================
 * SafeCalculator - Safe expression evaluation (1 function)
 * ============================================================================ */

/**
 * @brief Evaluate an arithmetic expression safely.
 *
 * Supports +, -, *, /, parentheses, negative and decimal numbers.
 * Returns PROVEN_ERR_PARSE_FAILURE for invalid expressions.
 * Returns PROVEN_ERR_DIVISION_BY_ZERO for division by zero.
 */
ProvenFloatResult proven_calculator_eval(const uint8_t* ptr, size_t len);
/** @brief Sigmoid function: 1 / (1 + exp(-x)). */
double proven_ml_sigmoid(double x);
/** @brief ReLU function: max(0, x). */
double proven_ml_relu(double x);
/** @brief Leaky ReLU: x >= 0 ? x : alpha * x. */
double proven_ml_leaky_relu(double x, double alpha);
/** @brief Clamp value to [min_val, max_val]. */
double proven_ml_clamp(double x, double min_val, double max_val);
/* ============================================================================
 * SafeAngle - Angle conversions and normalization (4 functions)
 * ============================================================================ */

/** @brief Convert degrees to radians. */
double proven_angle_deg_to_rad(double degrees);
/** @brief Convert radians to degrees. */
double proven_angle_rad_to_deg(double radians);
/** @brief Normalize angle to [0, 360) degrees. Returns 0 for NaN. */
double proven_angle_normalize_degrees(double degrees);
/** @brief Normalize angle to [0, 2*pi) radians. Returns 0 for NaN. */
double proven_angle_normalize_radians(double radians);