bindings/mojo/src/lib_proven.mojo


fn proven_math_pow_checked(base: Int64, exp: UInt32) -> IntResult:
    """Integer exponentiation with overflow checking."""
    return external_call["proven_math_pow_checked", IntResult, Int64, UInt32](
        base, exp
    )


# =============================================================================
# SafeFloat FFI
# =============================================================================


fn proven_float_div(a: Float64, b: Float64) -> FloatResult:
    """Safe floating-point division. Error on zero divisor or NaN."""
    return external_call["proven_float_div", FloatResult, Float64, Float64](a, b)


fn proven_float_is_finite(x: Float64) -> Bool:
    """Check if float is finite (not NaN or Inf)."""
    return external_call["proven_float_is_finite", Bool, Float64](x)


fn proven_float_is_nan(x: Float64) -> Bool:
    """Check if float is NaN."""
    return external_call["proven_float_is_nan", Bool, Float64](x)


fn proven_float_sqrt(x: Float64) -> FloatResult:
    """Safe square root. Error if x is negative or NaN."""
    return external_call["proven_float_sqrt", FloatResult, Float64](x)


fn proven_float_ln(x: Float64) -> FloatResult:
    """Safe natural logarithm. Error if x <= 0 or NaN."""
    return external_call["proven_float_ln", FloatResult, Float64](x)


# =============================================================================
# SafeString FFI
# =============================================================================


fn proven_string_is_valid_utf8(
    ptr: UnsafePointer[UInt8], length: Int
) -> BoolResult:
    """Check if bytes are valid UTF-8. Delegates to libproven."""
    return external_call[
        "proven_string_is_valid_utf8", BoolResult, UnsafePointer[UInt8], Int
    ](ptr, length)


fn proven_string_escape_sql(
    ptr: UnsafePointer[UInt8], length: Int
) -> StringResult:
    """Escape string for SQL. Caller must free result with proven_free_string."""
    return external_call[
        "proven_string_escape_sql", StringResult, UnsafePointer[UInt8], Int
    ](ptr, length)


fn proven_string_escape_html(
    ptr: UnsafePointer[UInt8], length: Int
) -> StringResult:
    """Escape string for HTML (XSS prevention). Caller must free result."""
    return external_call[
        "proven_string_escape_html", StringResult, UnsafePointer[UInt8], Int
    ](ptr, length)


fn proven_string_escape_js(
    ptr: UnsafePointer[UInt8], length: Int
) -> StringResult:
    """Escape string for JavaScript literals. Caller must free result."""
    return external_call[
        "proven_string_escape_js", StringResult, UnsafePointer[UInt8], Int
    ](ptr, length)


# =============================================================================
# SafePath FFI
# =============================================================================


fn proven_path_has_traversal(
    ptr: UnsafePointer[UInt8], length: Int
) -> BoolResult:
    """Check if path contains directory traversal sequences (..)."""
    return external_call[
        "proven_path_has_traversal", BoolResult, UnsafePointer[UInt8], Int
    ](ptr, length)


fn proven_path_sanitize_filename(
    ptr: UnsafePointer[UInt8], length: Int
) -> StringResult:
    """Sanitize a filename. Caller must free result with proven_free_string."""
    return external_call[
        "proven_path_sanitize_filename", StringResult, UnsafePointer[UInt8], Int
    ](ptr, length)


# =============================================================================
# SafeEmail FFI
# =============================================================================


fn proven_email_is_valid(
    ptr: UnsafePointer[UInt8], length: Int
) -> BoolResult:
    """Validate email address (RFC 5321 simplified)."""
    return external_call[
        "proven_email_is_valid", BoolResult, UnsafePointer[UInt8], Int
    ](ptr, length)


# =============================================================================
# SafeNetwork FFI
# =============================================================================


fn proven_network_parse_ipv4(
    ptr: UnsafePointer[UInt8], length: Int
) -> IPv4Result:
    """Parse IPv4 address string (e.g. '192.168.1.1')."""
    return external_call[
        "proven_network_parse_ipv4", IPv4Result, UnsafePointer[UInt8], Int
    ](ptr, length)


fn proven_network_ipv4_is_private(addr: IPv4Address) -> Bool:
    """Check if IPv4 address is private (RFC 1918)."""
    return external_call[
        "proven_network_ipv4_is_private", Bool, IPv4Address
    ](addr)


fn proven_network_ipv4_is_loopback(addr: IPv4Address) -> Bool:
    """Check if IPv4 address is loopback (127.0.0.0/8)."""
    return external_call[
        "proven_network_ipv4_is_loopback", Bool, IPv4Address
    ](addr)


# =============================================================================
# SafeCrypto FFI
# =============================================================================


fn proven_crypto_constant_time_eq(
    ptr1: UnsafePointer[UInt8],
    len1: Int,
    ptr2: UnsafePointer[UInt8],
    len2: Int,
) -> BoolResult:
    """Constant-time byte comparison (timing-attack safe)."""
    return external_call[
        "proven_crypto_constant_time_eq",
        BoolResult,
        UnsafePointer[UInt8],
        Int,
        UnsafePointer[UInt8],
        Int,
    ](ptr1, len1, ptr2, len2)


fn proven_crypto_random_bytes(ptr: UnsafePointer[UInt8], length: Int) -> Int32:
    """Fill buffer with cryptographically secure random bytes."""
    return external_call[
        "proven_crypto_random_bytes", Int32, UnsafePointer[UInt8], Int
    ](ptr, length)


# =============================================================================
# SafeJson FFI
# =============================================================================


fn proven_json_is_valid(
    ptr: UnsafePointer[UInt8], length: Int
) -> BoolResult:
    """Check if string is valid JSON."""
    return external_call[
        "proven_json_is_valid", BoolResult, UnsafePointer[UInt8], Int
    ](ptr, length)


fn proven_json_get_type(ptr: UnsafePointer[UInt8], length: Int) -> Int32:
    """Get JSON value type at root level. Returns PROVEN_JSON_INVALID if invalid."""
    return external_call[
        "proven_json_get_type", Int32, UnsafePointer[UInt8], Int
    ](ptr, length)


# =============================================================================
# SafeDateTime FFI
# =============================================================================


fn proven_datetime_parse(
    ptr: UnsafePointer[UInt8], length: Int
) -> DateTimeResult:
    """Parse ISO 8601 date string."""
    return external_call[
        "proven_datetime_parse", DateTimeResult, UnsafePointer[UInt8], Int
    ](ptr, length)


fn proven_datetime_format_iso8601(dt: DateTime) -> StringResult:
    """Format DateTime as ISO 8601 string. Caller must free result."""
    return external_call[
        "proven_datetime_format_iso8601", StringResult, DateTime
    ](dt)


fn proven_datetime_is_leap_year(year: Int32) -> Bool:
    """Check if a year is a leap year."""
    return external_call["proven_datetime_is_leap_year", Bool, Int32](year)


fn proven_datetime_days_in_month(year: Int32, month: UInt8) -> UInt8:
    """Get number of days in a month. Returns 0 if month is invalid."""
    return external_call[
        "proven_datetime_days_in_month", UInt8, Int32, UInt8
    ](year, month)


# =============================================================================
# SafeHex FFI
# =============================================================================


fn proven_hex_encode(
    ptr: UnsafePointer[UInt8], length: Int, uppercase: Bool
) -> StringResult:
    """Encode bytes to hex string. Caller must free result."""
    return external_call[
        "proven_hex_encode", StringResult, UnsafePointer[UInt8], Int, Bool
    ](ptr, length, uppercase)


# =============================================================================
# SafeChecksum FFI
# =============================================================================


fn proven_checksum_crc32(
    ptr: UnsafePointer[UInt8], length: Int
) -> IntResult:
    """Calculate CRC32 checksum."""
    return external_call[
        "proven_checksum_crc32", IntResult, UnsafePointer[UInt8], Int
    ](ptr, length)


fn proven_checksum_verify_crc32(
    ptr: UnsafePointer[UInt8], length: Int, expected: UInt32
) -> BoolResult:
    """Verify CRC32 matches expected value."""
    return external_call[
        "proven_checksum_verify_crc32",
        BoolResult,
        UnsafePointer[UInt8],
        Int,
        UInt32,
    ](ptr, length, expected)


# =============================================================================
# SafeProbability FFI
# =============================================================================


fn proven_probability_create(value: Float64) -> Float64:
    """Create probability value clamped to [0, 1]."""
    return external_call["proven_probability_create", Float64, Float64](value)


fn proven_probability_and(a: Float64, b: Float64) -> Float64:
    """Multiply probabilities (independent events)."""
    return external_call["proven_probability_and", Float64, Float64, Float64](
        a, b
    )


fn proven_probability_or_exclusive(a: Float64, b: Float64) -> Float64:
    """Add probabilities (mutually exclusive events), clamped to 1.0."""
    return external_call[
        "proven_probability_or_exclusive", Float64, Float64, Float64
    ](a, b)


fn proven_probability_not(p: Float64) -> Float64:
    """Complement probability: 1 - p."""
    return external_call["proven_probability_not", Float64, Float64](p)


# =============================================================================
# SafeCalculator FFI
# =============================================================================


fn proven_calculator_eval(
    ptr: UnsafePointer[UInt8], length: Int
) -> FloatResult:
    """Evaluate an arithmetic expression safely."""
    return external_call[
        "proven_calculator_eval", FloatResult, UnsafePointer[UInt8], Int
    ](ptr, length)


# =============================================================================
# SafeAngle FFI
# =============================================================================


fn proven_angle_deg_to_rad(degrees: Float64) -> Float64:
    """Convert degrees to radians."""
    return external_call["proven_angle_deg_to_rad", Float64, Float64](degrees)


fn proven_angle_rad_to_deg(radians: Float64) -> Float64:
    """Convert radians to degrees."""
    return external_call["proven_angle_rad_to_deg", Float64, Float64](radians)


fn proven_angle_normalize_degrees(degrees: Float64) -> Float64:
    """Normalize angle to [0, 360) degrees."""
    return external_call["proven_angle_normalize_degrees", Float64, Float64](
        degrees
    )


fn proven_angle_normalize_radians(radians: Float64) -> Float64:
    """Normalize angle to [0, 2*pi) radians."""
    return external_call["proven_angle_normalize_radians", Float64, Float64](
        radians
    )


# =============================================================================
# SafeML FFI
# =============================================================================


fn proven_ml_sigmoid(x: Float64) -> Float64:
    """Sigmoid function: 1 / (1 + exp(-x))."""
    return external_call["proven_ml_sigmoid", Float64, Float64](x)


fn proven_ml_relu(x: Float64) -> Float64:
    """ReLU function: max(0, x)."""
    return external_call["proven_ml_relu", Float64, Float64](x)


fn proven_ml_leaky_relu(x: Float64, alpha: Float64) -> Float64:
    """Leaky ReLU: x >= 0 ? x : alpha * x."""
    return external_call["proven_ml_leaky_relu", Float64, Float64, Float64](
        x, alpha
    )


fn proven_ml_clamp(x: Float64, min_val: Float64, max_val: Float64) -> Float64:
    """Clamp value to [min_val, max_val]."""
    return external_call[
        "proven_ml_clamp", Float64, Float64, Float64, Float64
    ](x, min_val, max_val)

